想定外の入力に対してエラー表示のコードを追記しました